manifests/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rube  
spec:
  template:    
    spec:
      containers:
      - name: rube        
        args:
        - --honeycomb-apikey=gcpsecretmanager:///projects/foyle-dev/secrets/honeycomb-api-key/versions/latest
        - --openai-apikey=gcpsecretmanager:///projects/foyle-dev/secrets/rube-dev-openai-apikey/versions/latest
