manifests/dev/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: rube
  namespace: rube
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
    namespace: gateway
  hostnames:
  - "dev.foyle.io"  
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /demo/dev
    filters:
      - type: URLRewrite
        urlRewrite:          
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: rube-dev
      port: 80
